# evomem

./: .gitignore  Cargo.toml  Makefile  README.md
scripts/: bump-version.sh
src/: api.rs  capture.rs  cli.rs  client.rs  config.rs  contradiction.rs  error.rs  hygiene.rs  lib.rs  main.rs  model.rs  stats.rs  text.rs  think.rs  validate.rs
src/embed/: hash_embedder.rs  mod.rs
src/ingest/: chunker.rs  frontmatter.rs  linker.rs  mod.rs
src/search/: fusion.rs  graph.rs  intent.rs  lexical.rs  mod.rs  vector.rs
src/server/: mod.rs
src/store/: chunks.rs  contradictions.rs  docs.rs  hygiene.rs  links.rs  mod.rs  pages.rs  provenance.rs  schema.rs  words.rs
tests/: integration.rs
